welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:3: error: not found: value a
  a=0
  ^Array2:4: error: not found: value a
  a=getWorldHeight()-1
  ^Array2:28: error: not found: value T
  for(i<- 0 to T.length-2){
               ^Array2:29: error: not found: value T
  	T(i)=getCouleurSol()
        ^